readd manual refresh

--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
 </head>
 
 <body>
+  <!-- Manual trigger to refresh the page-->
+  <div class="trigger"><a href="https://goodmanvn2003.github.io"><i
+        class="zmdi zmdi-refresh-alt"></i></a></div>
   <!-- Chicago-->
   <div id="chicago">
     <div class="title">
