--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
         class="zmdi zmdi-refresh-alt"></i></a></div>
   <!-- Chicago-->
   <div id="chicago">
-    <div class="title">
+    <!-- <div class="title">
       <h1>Life</h1>
       <h2>Simply what you see...</h2>
-    </div>
+    </div> -->
   </div>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="scripts.js"></script>
